--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -69,10 +69,30 @@
                 </nav>
                 <div class="header__heading-container">
                     <h1 class="header__heading-main">Photography<br /> Masterclass</h1>
-                    <p class="header__heading-sub">Master landscape photography in 10 days</p>
+                    <p class="header__heading-sub">Master landscape Photography in 10 days</p>
                 </div>
             </div>
             <div class="header__slope"></div>
         </header>
+
+
+
+
+
+
+        
+        <section class="motivation">
+            <div class="container">
+                <div class="motivation__column-text">
+                    <h2>Warum Landschaftsfotografie?</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <div class="motivation__column-images">
+                    <img src="images/motivation/pexels-jacub-gomez-1152043.jpg" alt="" />
+                    <img src="images/motivation/pexels-jaime-reimer-2662086.jpg" alt="" />
+                    <img src="images/motivation/pexels-simon-migaj-747964.jpg" alt="" />
+                </div>
+            </div>
+        </section>
     </body>
 </html>
