--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -74,6 +74,7 @@
             </div>
             <div class="header__slope"></div>
         </header>
+        
         <section class="motivation">
             <div class="container">
                 <div class="motivation__column-text">
@@ -88,16 +89,9 @@
             </div>
         </section>
 
-
-
-
-        
         <section class="tours">
-            <h2>Unsere Photografie-Touren</h2>
+            <h2 class="tours__heading">Unsere Photografie-Touren</h2>
         </section>
-
-
-
 
     </body>
 </html>
