--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -91,9 +91,14 @@
 
 
 
+
         <section class="tours">
-            <h2 class="tours__heading">Unsere Photografie-Touren</h2>
+            <div class="tours__container">
+                <h2 class="tours__heading">Unsere Photografie-Touren</h2>
+            </div>
         </section>
+
+
 
         
     </body>
