--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="container header__container">
+            <div class="header__container">
                 <nav class="navigation">
                     <ul>
                         <li class="navigation__list-item">
