--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -114,12 +114,6 @@
                                 </g>
                             </svg>
                         </div>
-
-
-
-
-
-
                         <div class="tours__card-content">
                             <h5 class="tours__card-heading">Tour durch die Wüste</h5>
                             <p class="tours__card-location">
@@ -142,12 +136,6 @@
                             </p>
                         </div>
                     </div>
-
-
-
-
-
-                    
                     <div class="tours__card"></div>
                     <div class="tours__card"></div>
                     <div class="tours__card"></div>
@@ -155,5 +143,8 @@
                 </div>
             </div>
         </section>
+
+        <!-- Bux fix for Chrome: https://stackoverflow.com/questions/14389566/stop-css-transition-from-firing-on-page-load -->
+        <script> </script>
     </body>
 </html>
