--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -312,6 +312,32 @@
             </div>
         </section>
 
+
+
+
+
+
+
+
+        
+        <section class="story">
+            <video autoplay muted loop>
+                <source type="video/mp4" src="videos/production_ID_4328534.mp4" />
+            </video>
+
+            <div class="story__container">
+                <h3 class="story__heading">Unsere Geschichte</h3>
+                <div class="story__desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu porta quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam nec mauris nec nunc vulputate faucibus. Suspendisse euismod sapien a eros molestie tempor. Sed nulla mi, lobortis vel euismod id, consectetur et felis.</p>
+                    <p>Morbi volutpat at nibh eu vehicula. Integer vel hendrerit turpis, ut porttitor metus. Duis volutpat mauris a velit aliquam venenatis. Phasellus ut vulputate libero, quis convallis dui. Duis et mi eu enim tempus feugiat a ut neque. Praesent eget justo eget nulla pharetra dapibus.</p>
+                    <p>Etiam pulvinar arcu non tempus suscipit. Cras mauris tellus, molestie non dapibus sit amet, sodales a nulla. Nulla ullamcorper dolor vel magna aliquet venenatis. Nullam at mi elit. Phasellus sit amet urna quis mi maximus volutpat sit amet ut leo. </p>
+                </div>
+                <div class="story__book">
+                    <a href="#">Book now</a>
+                </div>
+            </div>
+        </section>
+
         <!-- Bux fix for Chrome: https://stackoverflow.com/questions/14389566/stop-css-transition-from-firing-on-page-load -->
         <script> </script>
     </body>
