--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -325,7 +325,7 @@
                     <p>Etiam pulvinar arcu non tempus suscipit. Cras mauris tellus, molestie non dapibus sit amet, sodales a nulla. Nulla ullamcorper dolor vel magna aliquet venenatis. Nullam at mi elit. Phasellus sit amet urna quis mi maximus volutpat sit amet ut leo. </p>
                 </div>
                 <div class="story__book">
-                    <a class="button button--white" href="#">Book now</a>
+                    <a class="button button--white button--background-blur" href="#">Book now</a>
                 </div>
             </div>
         </section>
