--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -312,8 +312,11 @@
             </div>
         </section>
         <section class="story">
-            <video class="story__video" autoplay muted loop>
-                <source type="video/mp4" src="videos/production_ID_4328534.mp4" />
+            <video class="story__video" muted loop>
+                <!-- Quelle: https://www.pexels.com/video/a-woman-paddling-a-boat-in-lake-louise-4476816/ -->
+                <source type="video/webm" src="videos/pexels_4476816.webm" />
+                <source type="video/mp4" src="videos/pexels_4476816.mp4" />
+                <source type="video/ogg" src="videos/pexels_4476816.ogv" />
             </video>
             <div class="story__video-colorize"></div>
 
@@ -332,5 +335,8 @@
 
         <!-- Bux fix for Chrome: https://stackoverflow.com/questions/14389566/stop-css-transition-from-firing-on-page-load -->
         <script> </script>
+
+        <script src="scripts/main.js" async></script>
+
     </body>
 </html>
