--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -333,10 +333,40 @@
             </div>
         </section>
 
+
+
+
+
+
+
+        <section class="offers">
+            <div class="offers__container">
+                <div class="offers__card"> TEST </div>
+                <div class="offers__card"></div>
+                <div class="offers__card"></div>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- Bux fix for Chrome: https://stackoverflow.com/questions/14389566/stop-css-transition-from-firing-on-page-load -->
         <script> </script>
 
         <script src="scripts/main.js" async></script>
-
     </body>
 </html>
