--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -336,12 +336,12 @@
 
 
 
-
-
-
+        
         <section class="offers">
             <div class="offers__container">
-                <div class="offers__card"> TEST </div>
+                <div class="offers__card">
+                    TEST
+                </div>
                 <div class="offers__card"></div>
                 <div class="offers__card"></div>
             </div>
