--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -332,18 +332,15 @@
                 </div>
             </div>
         </section>
-
-
-
-
-        
         <section class="offers">
-            <div class="offers__container">
-                <div class="offers__card">
-                    TEST
+            <div class="container">
+                <div class="offers__container">
+                    <div class="offers__card">
+                        TEST
+                    </div>
+                    <div class="offers__card"></div>
+                    <div class="offers__card"></div>
                 </div>
-                <div class="offers__card"></div>
-                <div class="offers__card"></div>
             </div>
         </section>
 
