--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -332,11 +332,25 @@
                 </div>
             </div>
         </section>
+
+
+
+
+
+
+
+
+
+
+
         <section class="offers">
             <div class="container">
                 <div class="offers__container">
                     <div class="offers__card">
-                        TEST
+                        <div class="offers__image-container">
+                            <img class="offers__image" src="images/offers/pexels-min-an-898766.jpg" alt="" />
+                        </div>
+                        <h2>INHALT</h2>
                     </div>
                     <div class="offers__card"></div>
                     <div class="offers__card"></div>
