14-19 Info-Bereich umsetzen (Teil 1)

--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -340,8 +340,8 @@
                             <img class="offers__image" src="images/offers/pexels-min-an-898766.jpg" alt="" />
                         </div>
                         <div class="offers__content">
-                            <h4>Fotografie-Schnellkurs</h4>
-                            <p>Lorem ipsum dolor sit amet.</p>
+                            <h4 class="offers__content-heading">Fotografie-Schnellkurs</h4>
+                            <p class="offers__content-subheading">Lorem ipsum dolor sit amet.</p>
                             <div class="offers__content-info">
                                 <div class="offers__content-info-duration">
                                     <svg class="icon" viewBox="0 0 415.9 415.9">
