--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -369,8 +369,8 @@
                                 </div>
                             </div>
                             <div class="offers__content-price-container">
-                                Now only
-                                <strong class="offers__content-price">330 €</strong>
+                                jetzt nur:
+                                <strong class="offers__content-price">329,99 €</strong>
                             </div>
                         </div>
                     </div>
