--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -373,6 +373,9 @@
                                 <strong class="offers__content-price">329,99 €</strong>
                             </div>
                         </div>
+                        <div class="offers__card-hover">
+                            <a href="#" class="button button--secondary">Jetzt buchen!</a>
+                        </div>
                     </div>
                     <div class="offers__card"></div>
                     <div class="offers__card"></div>
