--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -333,7 +333,7 @@
         <section class="offers">
             <div class="container">
                 <div class="offers__container">
-                    <div class="offers__card-container">
+                    <div class="offers__card-container offers__card-container--flip">
                         <div class="offers__card">
                             <div class="offers__card-primary">
                                 <div class="offers__image-container">
