18 10-15 Galerie-Bereich anlegen. Interaktiven Button bauen

--- a/Fotography/index.html
+++ b/Fotography/index.html
@@ -820,6 +820,124 @@
       </div>
     </section>
 
+
+
+    <!------------------------------------------------------------------------------------------------------Section Gallery -->
+    <section class="gallery">
+      <div class="gallery__container">
+        <h3 class="gallery__heading">Bilder von unseren Studierenden </h3>
+
+        <div class="gallery__list">
+          <a class="gallery__list-item gallery__list-item--first" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-frans-van-heerden-624015.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-jaime-reimer-2662116.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-jaime-reimer-2749500.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-james-wheeler-417074.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-sasha-prasastika-2695391.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-vishal-amin-910307.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery/pexels-burst-374870.jpg"
+              alt="A lion resting"
+            />
+          </a>
+        </div>
+        <input
+          class="gallery__cb-toggle"
+          id="gallery__cb-toggle"
+          type="checkbox"
+        />
+        <label class="button" for="gallery__cb-toggle">Mehr</label>
+        <div class="gallery__list gallery__list--cb-toggle">
+          <a class="gallery__list-item gallery__list-item--last" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-kei-scampa-4507967.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-max-ravier-3331094.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-michael-block-3225517.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-sam-kolder-2387873.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-tobias-bjorkli-2113566.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-trace-hudson-2365457.jpg"
+              alt="A lion resting"
+            />
+          </a>
+          <a class="gallery__list-item" href="#">
+            <img
+              class="gallery__list-item-image"
+              src="./images/gallery2/pexels-trace-hudson-2400594.jpg"
+              alt="A lion resting"
+            />
+          </a>
+        </div>
+      </div>
+    </section>
+
     <!-- Bux fix for Chrome: https://stackoverflow.com/questions/14389566/stop-css-transition-from-firing-on-page-load -->
     <script></script>
 
